[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Tiago Vasconcelos <talvasconcelos@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_api"}]

[tool.poetry.dependencies]
python = "^3.9 | ^3.10"
httpx = "^0.25.1"
asyncio = "^3.4.3"
cashu = "^0.15.3"
fastapi = "^0.104.0"
uvicorn = {version = "^0.23.0", extras = ["standard"]}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
